fix(packages): fixed marker and cluster icons on mobile and desktop

--- a/packages/forms-web-app/src/public/stylesheets/leaflet-pins.css
+++ b/packages/forms-web-app/src/public/stylesheets/leaflet-pins.css
@@ -95,7 +95,8 @@
 	background-color: transparent;
 }
 
-.marker-cluster div {
+.cluster-icon,
+.cluster-icon-touch {
 	display: flex;
 	align-items: center;
 	justify-content: center;
